update for build with libs

--- a/src/hello/Makefile.am
+++ b/src/hello/Makefile.am
@@ -1,5 +1,5 @@
 SUBDIRS = alib
 bin_PROGRAMS = hello
 hello_SOURCES = main.c hello.c
-hello_LDADD = alib/libmyalib.a
+hello_LDADD = alib/libmyalib.a alib/libmyalib2.a
 hello_CFLAGS = -I./alib
