--- a/src/hello/alib/Makefile.am
+++ b/src/hello/alib/Makefile.am
@@ -1,2 +1,3 @@
-noinst_LIBRARIES = libmyalib.a
+noinst_LIBRARIES = libmyalib.a libmyalib2.a
 libmyalib_a_SOURCES = myalib.c
+libmyalib2_a_SOURCES = myalib2.c
